--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "moon-phases-calculator"
-version = "1.0.0"
+version = "1.3.1"
 description = "A command-line Python application that calculates moonrise and moonset times for any given city and state"
 authors = [
-    {name = "Moon Phases Calculator Team"}
+    {name = "Luis Cortes"}
 ]
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.9"
 keywords = ["astronomy", "moon", "phases", "cli", "timezone"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -18,28 +18,23 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10", 
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Astronomy",
     "Topic :: Utilities",
 ]
 
 dependencies = [
-    "requests",
-    "geopy",
-    "timezonefinder",
-    "pytz",
+    "requests==2.32.4",
+    "geopy==2.4.1", 
+    "timezonefinder==6.5.4",
+    "pytz==2024.2",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "black",
-    "flake8",
-    "mypy",
+    "pytest==8.3.5",
+    "black==24.8.0",
+    "flake8==5.0.4", 
+    "mypy==1.14.1",
 ]
 
 [project.urls]
@@ -49,18 +44,18 @@ Documentation = "https://github.com/your-username/moon-phases-calculator/tree/ma
 Issues = "https://github.com/your-username/moon-phases-calculator/issues"
 
 [project.scripts]
-moon-phases = "moon_data:main"
+moon-phases = "moon_phases.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["moon_data.py"]
+packages = ["src/moon_phases"]
 
 [tool.black]
 line-length = 88
-target-version = ['py313']
+target-version = ['py38']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -81,7 +76,7 @@ max-line-length = 88
 extend-ignore = ["E203", "W503"]
 
 [tool.mypy]
-python_version = "3.13"
+python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true 
