feat: rename package to lunar-times v0.5.0
- Rename package from moon-phases-calculator to lunar-times
- Update command from moon-phases to lunar-times
- Change description to 'Calculate lunar rise and set times for any location'
- Update keywords to focus on lunar times rather than phases
- Convert all version numbers from 1.x.y to 0.x.y format for initial development
- Update all documentation with new package name and commands
- Maintain backward compatibility for internal module structure
- No changes to core functionality or API

The new name accurately reflects that this calculates moonrise/moonset times,
not moon phases (new/full/waxing/waning), eliminating user confusion.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,17 @@
 [project]
-name = "moon-phases-calculator"
-version = "1.4.0"
-description = "A command-line Python application that calculates moonrise and moonset times for any given city and state"
+name = "lunar-times"
+version = "0.5.0"
+description = "Calculate lunar rise and set times for any location"
 authors = [
-    {name = "Luis Cortes"}
+    {name = "Luis Cortés", email = "your-email@example.com"}
 ]
-readme = "README.md"
+maintainers = [
+    {name = "Luis Cortés", email = "your-email@example.com"}
+]
+readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
-requires-python = ">=3.8,<3.9"
-keywords = ["astronomy", "moon", "phases", "cli", "timezone"]
+requires-python = ">=3.8"
+keywords = ["lunar", "moonrise", "moonset", "astronomy", "cli", "times"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
@@ -18,9 +21,15 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Astronomy",
     "Topic :: Utilities",
 ]
+
+
 
 dependencies = [
     "requests==2.32.4",
@@ -36,16 +45,19 @@ dev = [
     "black==24.8.0",
     "flake8==5.0.4", 
     "mypy==1.14.1",
+    "twine==5.1.1",
 ]
 
-[project.urls]
-Homepage = "https://github.com/your-username/moon-phases-calculator"
-Repository = "https://github.com/your-username/moon-phases-calculator"
-Documentation = "https://github.com/your-username/moon-phases-calculator/tree/main/docs"
-Issues = "https://github.com/your-username/moon-phases-calculator/issues"
+# [project.urls]
+# Uncomment and update with real URLs when ready for public release:
+# Homepage = "https://github.com/your-username/moon-phases-calculator"
+# Repository = "https://github.com/your-username/moon-phases-calculator" 
+# Documentation = "https://github.com/your-username/moon-phases-calculator/tree/main/docs"
+# Issues = "https://github.com/your-username/moon-phases-calculator/issues"
+# Changelog = "https://github.com/your-username/moon-phases-calculator/blob/main/docs/CHANGELOG.md"
 
 [project.scripts]
-moon-phases = "moon_phases.cli:main"
+lunar-times = "moon_phases.cli:main"
 
 [build-system]
 requires = ["hatchling"]
