--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lunar-times"
-version = "0.6.2"
+version = "0.6.3"
 description = "Calculate lunar rise and set times for any location"
 authors = [
     {name = "Luis Cortés", email = "your-email@example.com"}
@@ -46,6 +46,8 @@ dev = [
     "flake8==5.0.4", 
     "mypy==1.14.1",
     "twine==5.1.1",
+    "types-requests",
+    "types-pytz",
 ]
 
 # [project.urls]
@@ -92,7 +94,11 @@ extend-ignore = ["E203", "W503"]
 python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = true 
+disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = "geopy.geocoders"
+ignore_missing_imports = true 
 
 [tool.coverage.run]
 source = ["src"]
