Fix Python 3.12 numpy compatibility and bump to v0.6.4
- Add conditional numpy version constraints to resolve Python 3.12 distutils conflict
- Use numpy>=1.19.0 for Python <3.12 (backward compatibility)
- Use numpy>=1.26.0 for Python >=3.12 (required for distutils-free build)
- Resolves 'ModuleNotFoundError: No module named distutils' on Python 3.12
- NumPy 1.26.0+ uses Meson build system instead of removed distutils
- Bump version from 0.6.3 to 0.6.4 (patch release for compatibility fix)
- Update CHANGELOG.md with v0.6.4 entry documenting Python 3.12 compatibility
- GitHub Actions CI should now pass on all Python versions (3.8-3.12)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lunar-times"
-version = "0.6.3"
+version = "0.6.4"
 description = "Calculate lunar rise and set times for any location"
 authors = [
     {name = "Luis Cortés", email = "your-email@example.com"}
@@ -36,6 +36,8 @@ dependencies = [
     "geopy==2.4.1", 
     "timezonefinder==6.5.4",
     "pytz==2024.2",
+    "numpy>=1.19.0; python_version<'3.12'",
+    "numpy>=1.26.0; python_version>='3.12'",
 ]
 
 [project.optional-dependencies]
