Fix invisible character script virtual environment corruption
- Add comprehensive directory exclusions to prevent cleaning installed packages
- Exclude .venv, .git, node_modules, cache directories, and build artifacts
- Apply exclusions to all file traversal functions (scan_directory, dry-run, clean modes)
- Update CHANGELOG.md with v0.6.9 release notes documenting the fix
- Update FAILURE.md with virtual environment corruption troubleshooting
- Bump version from 0.6.8 to 0.6.9 in pyproject.toml and __init__.py

Fixes issue where script was corrupting virtual environments by removing
smart quotes and other characters from installed package source code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lunar-times"
-version = "0.6.7"
+version = "0.6.9"
 description = "Calculate lunar rise and set times for any location"
 authors = [
     {name = "Luis Cortés", email = "your-email@example.com"}
@@ -48,6 +48,7 @@ dev = [
     "flake8==5.0.4", 
     "mypy==1.14.1",
     "twine==5.1.1",
+    "docutils==0.19",
     "types-requests",
     "types-pytz",
 ]
