feat: update email addresses to GitHub noreply for privacy protection
- Update author/maintainer email from lcortes@example.com to cscortes@users.noreply.github.com
- Following GitHub best practices for package publishing privacy
- Updated email in pyproject.toml, src/moon_phases/__init__.py, and documentation
- Fixed version number in __init__.py to match current release (0.6.10)
- Updated PYPI.md and FAILURE.md documentation to reflect email changes
- Package builds and validation pass successfully

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "lunar-times"
 version = "0.6.10"
 description = "Calculate lunar rise and set times for any location"
 authors = [
-    {name = "Luis Cortés", email = "lcortes@example.com"}
+    {name = "Luis Cortés", email = "cscortes@users.noreply.github.com"}
 ]
 maintainers = [
-    {name = "Luis Cortés", email = "lcortes@example.com"}
+    {name = "Luis Cortés", email = "cscortes@users.noreply.github.com"}
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
