refactor: rename package from moon_phases to lunar_times
- Rename package directory: src/moon_phases/ → src/lunar_times/
- Update all import statements and references throughout codebase
- Update pyproject.toml package configuration and entry point
- Update test files with new package imports
- Update CI/CD workflows with new package name
- Update documentation and examples across all docs
- Update Makefile coverage commands
- Maintain backward compatibility with lunar-times CLI command
- All tests pass (22/22) with new package structure
- Package builds and validation succeed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
         cd /tmp
         pip install ${{ github.workspace }}/dist/*.whl
         lunar-times --help || echo "Help command not available"
-        python -c "import moon_phases.cli; print('Package imports successfully')"
+        python -c "import lunar_times.cli; print('Package imports successfully')"
 
   # Multi-OS testing for critical functionality
   cross-platform:
