Fix GitHub Actions version extraction to avoid dependency version conflicts
- Change grep pattern from 'version.*=' to '^version = '
- Ensures only main package version line is matched
- Prevents false matches on dependency version specifications

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Verify version tag matches package version
       run: |
-        PACKAGE_VERSION=$(grep "version.*=" pyproject.toml | cut -d'"' -f2)
+        PACKAGE_VERSION=$(grep '^version = ' pyproject.toml | cut -d'"' -f2)
         TAG_VERSION=${GITHUB_REF#refs/tags/v}
         echo "Package version: $PACKAGE_VERSION"
         echo "Tag version: $TAG_VERSION"
