--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,8 @@ jobs:
     - name: Test installation from Test PyPI
       run: |
         sleep 60  # Wait for package to be available
-        pip install --index-url https://test.pypi.org/simple/ lunar-times
+        TAG_VERSION=${GITHUB_REF#refs/tags/v}
+        pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ lunar-times==$TAG_VERSION
         lunar-times -d
 
     - name: Publish to PyPI
